--- a/index.html
+++ b/index.html
@@ -81,68 +81,127 @@
             <ul>
                 <li>
                     <img src="./img/John_Smith.png" alt="photo John Smith">
-                    <h3>John Smith</h3>
-                    <p>Product Designer</p>
-                    <img src="./img/inst_icon1.svg" alt="inst_icon">
-                    <img src="./img/twiter.svg" alt="twiter icon">
-                    <img src="./img/Facebook_icon.svg" alt="Facebook_icon">
-                    <img src="./img/in.svg" alt="in icon">
-                </li>
-                <li>
-                    <img src="./img/Marta_Stewart.png" alt="photo Marta Stewart">
-                    <h3>Marta Stewart</h3>
-                    <p>Frontend Developer</p>
-                    <img src="./img/inst_icon1.svg" alt="inst_icon">
-                    <img src="./img/twiter.svg" alt="twiter icon">
-                    <img src="./img/Facebook_icon.svg" alt="Facebook_icon">
-                    <img src="./img/in.svg" alt="in icon">
-                </li>
-                <li>
-                    <img src="./img/Robert_Jakis.png" alt="photo Robert Jakis">
-                    <h3>Robert Jakis</h3>
-                    <p>Marketing</p>
-                    <img src="./img/inst_icon1.svg" alt="inst_icon">
-                    <img src="./img/twiter.svg" alt="twiter icon">
-                    <img src="./img/Facebook_icon.svg" alt="Facebook_icon">
-                    <img src="./img/in.svg" alt="in icon">
-                </li>
-                <li>
-                    <img src="./img/Martin_Doe.png" alt="photo Martin Doe">
-                    <h3>Martin Doe</h3>
-                    <p>UI Designer</p>
-                    <img src="./img/inst_icon1.svg" alt="inst_icon">
-                    <img src="./img/twiter.svg" alt="twiter icon">
-                    <img src="./img/Facebook_icon.svg" alt="Facebook_icon">
-                    <img src="./img/in.svg" alt="in icon">
-                </li>
-            </ul>
-        </section>
-    </div>
-    <div>
-        <section>
-            <h2>Постоянные клиенты</h2>
-            <ul>
-                <li>
-                    <img src="./img/logo/logo 1.jpg" alt="logo">
-                </li>
-                <li>
-                    <img src="./img/logo/logo 2.png" alt="logo">
-                </li>
-                <li>
-                    <img src="./img/logo/logo 3.png" alt="logo">
-                </li>
-                <li>
-                    <img src="./img/logo/logo 4.png" alt="logo">
-                </li>
-                <li>
-                    <img src="./img/logo/logo 5.png" alt="logo">
-                </li>
-                <li>
-                    <img src="./img/logo/logo 6.png" alt="logo">
-                </li>
-            </ul>
-        </section>
-    </div>
+    <main>
+        <div>
+            <section>
+                <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                <a href="">Заказать услугу</a>
+            </section>
+        </div>
+        <div>
+            <section>
+                <ul>
+                    <li>
+                        <img src="./img/details.svg" alt="details">
+                        <h2>Внимание к деталям</h2>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>
+                        <img src="./img/punctuality.svg" alt="punctuality">
+                        <h2>Пунктуальность</h2>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li>
+                        <img src="./img/planning.svg" alt="planning">
+                        <h2>Планирование</h2>
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <img src="./img/technologies.svg" alt="technologies">
+                        <h2>Современные технологии</h2>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div>
+            <section>
+                <h2>Чем мы занимаемся</h2>
+                <ul>
+                    <li>
+                        <img src="./img/desktop.png" alt="desktop">
+                        <h3>Десктопные приложения</h3>
+                    </li>
+                    <li>
+                        <img src="./img/mobyphone.png" alt="mobyphone">
+                        <h3>Мобильные приложения</h3>
+                    </li>
+                    <li>
+                        <img src="./img/disajnerphoto.png" alt="disajnerphoto">
+                        <h3>Дизайнерские решения</h3>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div>
+            <section>
+                <h2>Наша команда</h2>
+                <ul>
+                    <li>
+                        <img src="./img/John_Smith.png" alt="photo John Smith">
+                        <h3>John Smith</h3>
+                        <p>Product Designer</p>
+                        <img src="./img/inst_icon1.svg" alt="inst_icon">
+                        <img src="./img/twiter.svg" alt="twiter icon">
+                        <img src="./img/Facebook_icon.svg" alt="Facebook_icon">
+                        <img src="./img/in.svg" alt="in icon">
+                    </li>
+                    <li>
+                        <img src="./img/Marta_Stewart.png" alt="photo Marta Stewart">
+                        <h3>Marta Stewart</h3>
+                        <p>Frontend Developer</p>
+                        <img src="./img/inst_icon1.svg" alt="inst_icon">
+                        <img src="./img/twiter.svg" alt="twiter icon">
+                        <img src="./img/Facebook_icon.svg" alt="Facebook_icon">
+                        <img src="./img/in.svg" alt="in icon">
+                    </li>
+                    <li>
+                        <img src="./img/Robert_Jakis.png" alt="photo Robert Jakis">
+                        <h3>Robert Jakis</h3>
+                        <p>Marketing</p>
+                        <img src="./img/inst_icon1.svg" alt="inst_icon">
+                        <img src="./img/twiter.svg" alt="twiter icon">
+                        <img src="./img/Facebook_icon.svg" alt="Facebook_icon">
+                        <img src="./img/in.svg" alt="in icon">
+                    </li>
+                    <li>
+                        <img src="./img/Martin_Doe.png" alt="photo Martin Doe">
+                        <h3>Martin Doe</h3>
+                        <p>UI Designer</p>
+                        <img src="./img/inst_icon1.svg" alt="inst_icon">
+                        <img src="./img/twiter.svg" alt="twiter icon">
+                        <img src="./img/Facebook_icon.svg" alt="Facebook_icon">
+                        <img src="./img/in.svg" alt="in icon">
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div>
+            <section>
+                <h2>Постоянные клиенты</h2>
+                <ul>
+                    <li>
+                        <img src="./img/logo/logo 1.jpg" alt="logo">
+                    </li>
+                    <li>
+                        <img src="./img/logo/logo 2.png" alt="logo">
+                    </li>
+                    <li>
+                        <img src="./img/logo/logo 3.png" alt="logo">
+                    </li>
+                    <li>
+                        <img src="./img/logo/logo 4.png" alt="logo">
+                    </li>
+                    <li>
+                        <img src="./img/logo/logo 5.png" alt="logo">
+                    </li>
+                    <li>
+                        <img src="./img/logo/logo 6.png" alt="logo">
+                    </li>
+                </ul>
+            </section>
+        </div>
+    </main>
     <footer>
         <div>
             <h3>Web Studio</h3>
